--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -8,43 +8,17 @@
     
     {% block content %}
 
-        <section id="section1" class="flex flex-col items-center w-full mx-auto bg-gray-50 dark:bg-gray-900 lg:flex-row lg:h-screen xs:h-auto">
-            <div id="text-home" class="flex flex-col mx-10 mb-16 lg:w-1/2 xs:w-4/5">
-                <div class="flex flex-col text-gray-900 xs:w-full dark:text-white">
-                    <h1 class="text-4xl font-medium text-center md:text-left"><span id="frase"></span></h1>
-                    <p class="mt-4 mb-2 text-lg text-center md:text-left text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
-                </div>
-
-                <div class="flex xs:flex-row">
-                    <a href="{% url 'exibir_topico' first_item %}">
-                        <button type="submit" class="flex flex-row px-5 py-3 mt-6 text-base font-medium text-center text-blue-700 transition duration-300 bg-white border-2 border-blue-600 rounded-lg md:ml-0 hover:bg-blue-600 hover:text-white dark:border-white dark:bg-white dark:hover:border-blue-600 dark:hover:bg-blue-700 dark:hover:text-white ">Comece agora
-                            <span class="my-auto ml-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672 13.684 16.6m0 0-2.51 2.225.569-9.47 5.227 7.917-3.286-.672ZM12 2.25V4.5m5.834.166-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243-1.59-1.59" />
-                                </svg>                                  
-                            </span>
-                        </button>
-                    </a>
-
-                    <a href="#section3">
-                        <button type="submit" class="flex flex-row px-5 py-3 mt-6 ml-6 text-base font-medium text-center text-white transition duration-300 bg-blue-700 border-2 rounded-lg hover:bg-white hover:border-blue-600 hover:text-blue-600 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:border-blue-600 dark:hover:border-white ">Fale conosco
-                            <span class="my-auto ml-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 13.5h3.86a2.25 2.25 0 0 1 2.012 1.244l.256.512a2.25 2.25 0 0 0 2.013 1.244h3.218a2.25 2.25 0 0 0 2.013-1.244l.256-.512a2.25 2.25 0 0 1 2.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 0 0-2.15-1.588H6.911a2.25 2.25 0 0 0-2.15 1.588L2.35 13.177a2.25 2.25 0 0 0-.1.661Z" />
-                                  </svg>                                  
-                            </span>
-                        </button>
-                    </a>
+        <section id="section1" class="flex flex-col items-center w-full mx-auto lg:flex-row lg:h-screen xs:h-auto">
+            <div id="text-home" class="flex flex-col mx-auto mb-16 lg:w-10/12 xs:w-4/5">
+                <div class="flex flex-col mx-auto text-gray-900 dark:text-white">
+                    <h1 class="text-5xl font-medium text-center"><span id="frase"></span></h1>
+                    <p class="mt-4 mb-2 text-xl text-center text-wrap">Explore os fundamentos da programação e inicie sua jornada dentro da indústria tech.</p>
                 </div>
             </div>
 
-            <div id="img-home" class="flex flex-col md:w-1/2 md:h-fit">
-                <img src="{% static 'img/pinguim-programador.webp' %}" class="rounded-full md:size-10/12" alt="Noot Noot!">
-                <!-- <span align="right"><a class="mr-8 text-xs text-gray-900 cursor-pointer dark:text-white" target="_blank" href="https://storyset.com/online">Online illustrations by Storyset</a></span> -->
-            </div>
         </section>
 
-        <section id="section2" class="flex flex-col w-full py-20 mx-auto text-gray-900 bg-white dark:bg-slate-800 dark:text-white">
+        <section id="section2" class="flex flex-col w-full py-20 mx-auto text-gray-900 dark:text-white">
             <h2 id="title-topic" class="my-5 text-4xl font-medium text-center">Explore tópicos de programação</h2>
             <p id="text-topic" class="mx-4 my-5 text-lg text-center">Mergulhe nos principais conceitos e habilidades necessárias para se tornar um programador de sucesso!</p>
 
@@ -63,22 +37,25 @@
                 </form>
             </div>
 
-            <div class="containers">
-                <div class="card__container">
+            <div class="flex w-full mx-auto my-10">
+                <ul class="grid mx-auto my-6 xl:grid-cols-6 gap-y-20 md:grid-cols-4 xs:grid-cols-2">
                     {% for topico in topicos %}
-                        <article class="flex card__article min-h-80 bg-gradient-to-r from-black via-blue-500 to-blue-800 rounded-2xl">
-                            <img src="{{ topico.icon_topico.url }}" alt="image" class="mx-auto my-auto card__img lg:w-fit lg:h-fit">
-            
-                            <div class="card__data">
-                                {% for tag in topico.categorias.all %}
-                                    <li class="text-xs text-green-700 card__description">#{{ tag.nome }}</li>
-                                {% endfor %}
-                                <p class="text-base font-medium text-black">{{ topico.nome_topico }}</p>
-                                <a href="{% url 'exibir_topico' topico.id %}" class="text-sm text-blue-500 card__button">Veja mais</a>
+                        <li class="flex flex-row items-center h-24 px-2 mt-12">
+                            <div class="justify-between w-56 transition duration-300 transform border-2 border-gray-900 shadow-lg opacity-0 bg-gray-50 dark:bg-gray-900 rounded-xl card hover:scale-110 hover:shadow-xl min-h-52">
+                                <div class="flex items-center justify-center mx-auto my-auto rounded-xl bg-gradient-to-br from-sky-200 via-sky-400">
+                                    <img class="w-20 h-20" src="{{ topico.icon_topico.url }}" alt="" title="{{ topico.nome_topico }}">
+                                </div>
+                
+                                <div class="flex flex-col px-5 pt-2">
+                                    <h2 class="font-bold text-center text-gray-900 dark:text-white">{{ topico.nome_topico }}</h2>
+                                    <a class="flex justify-center w-full mx-auto" href="{% url 'exibir_topico' topico.id %}">
+                                        <button class="flex justify-center w-full px-2 py-1 mx-auto mt-2 text-white transition duration-150 bg-blue-700 rounded-md cursor-pointer hover:bg-blue-900" type="button">Explore</button>
+                                    </a>
+                                </div>
                             </div>
-                        </article>
+                        </li>
                     {% endfor %}
-                </div>
+                </ul>
             </div>
 
             <div class="flex mx-auto mt-16">
@@ -88,7 +65,7 @@
             </div>
         </section>
 
-        <section id="section3" class="flex">
+        <!-- <section id="section3" class="flex">
             <div class="relative w-full mx-auto ml-2 mr-2 bg-gray-300 dark:bg-gray-700 sm:pt-20 rounded-3xl 2xl:pt-40">
             
                 <div class="absolute top-0 right-0 hidden w-1/2 h-full bg-gray-400 border-2 dark:bg-gray-600 rounded-3xl lg:block"></div>
@@ -190,11 +167,11 @@
                 </div>
             
             </div>
-        </section>
+        </section> -->
 
-        <section id="section4" class="flex flex-col w-full mx-auto mt-10 rounded-tl-2xl bg-slate-300 dark:bg-slate-900">
-            <div class="flex flex-col min-h-auto dark:bg-slate-900 bg-slate-300">
-                <div class="py-12 dark:bg-slate-900 md:py-24 lg:py-32 bg-slate-300">
+        <section id="section4" class="flex flex-col w-full mx-auto mt-10 rounded-tl-2xl">
+            <div class="flex flex-col min-h-auto">
+                <div class="py-12 md:py-24 lg:py-32">
                     <div class="container grid gap-8 px-4 mx-auto md:px-6 md:grid-cols-2">
                         <div class="space-y-4">
                             <h2 class="text-3xl font-bold text-gray-600 dark:text-gray-200 md:text-4xl">About Us</h2>
@@ -243,41 +220,6 @@
             </div>
         </section>
 
-        <section id="section5" class="px-3 py-8 bg-gray-300 dark:bg-gray-700">
-            <div class="text-center">
-                <h2 class="mb-16 text-2xl font-semibold text-black dark:text-white">NOSSOS PROJETOS</h2>
-                <div class="flex flex-wrap justify-around gap-5 mx-20">
-                    <a href="#" target="_blank" class="w-[360px] h-[460px] bg-cover cursor-pointer relative rounded-3xl img-port port-one">
-    
-                        <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-full font-thin text-center text-white transition duration-500 bg-black opacity-0 rounded-2xl hover:opacity-70">
-                            <span class="font-semibold underline">Computacional</span><br>
-                            Cadastro de Empresas
-                        </div>
-                    </a>
-                    <a href="#" target="_blank" class="img-port w-[360px] h-[460px] bg-cover cursor-pointer relative rounded-3xl port-two">
-    
-                        <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-full font-thin text-center text-white transition duration-500 bg-black opacity-0 rounded-2xl hover:opacity-70">
-                            <span class="font-semibold underline">Mobile</span><br>
-                            Linguagens de Programação
-                        </div>
-                    </a>
-                    <a href="#" target="_blank" class="img-port w-[360px] h-[460px] bg-cover cursor-pointer relative rounded-3xl port-three">
-    
-                        <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-full font-thin text-center text-white transition duration-500 bg-black opacity-0 rounded-2xl hover:opacity-70">
-                            <span class="font-semibold underline">Web</span><br>
-                            Jogo do Mario
-                        </div>
-                    </a>
-                    <a href="#" target="_blank" class="img-port w-[360px] h-[460px] bg-cover cursor-pointer relative rounded-3xl port-four">
-    
-                        <div class="absolute top-0 left-0 flex flex-col items-center justify-center w-full h-full font-thin text-center text-white transition duration-500 bg-black opacity-0 rounded-2xl hover:opacity-70">
-                            <span class="font-semibold underline">Web</span><br>
-                            Site finanças
-                        </div>
-                    </a>
-                </div>
-            </div><!--interface-->
-        </section><!--projetos-->
 
         {% if messages %}
             <ul class="messages">
